Add get all maps api
